tests/security/immutableClassTrackInputThroughMethod/output.txt
ERROR: TaintedData - input.hack:15:6 - Detected tainted HTML tags